site/content/en/v0.18/docs/tasks/run/kubeflow/sparkapplications.md
---
title: "Run a SparkApplication"
date: 2025-11-17
weight: 7
description: >
  Run a Kueue scheduled SparkApplication
---

{{< feature-state state="alpha" for_version="v0.17" >}}

This page shows how to leverage Kueue's scheduling and resource management capabilities when running [Spark Operator](https://github.com/kubeflow/spark-operator) SparkApplication.

This guide is for [batch users](/v0.18/docs/tasks#batch-user) that have a basic understanding of Kueue. For more information, see [Kueue's overview](/v0.18/docs/overview).

{{% alert title="Note" color="primary" %}}
`SparkApplicationIntegration` is currently an alpha feature and is disabled by default.

To enable it, the `SparkApplicationIntegration` feature gate needs to be activated, and `sparkoperator.k8s.io/sparkapplication` must be added as an allowed workload.

{{% /alert %}}

## Before you begin

Enable SparkApplication integration in Kueue. You can [modify Kueue configurations from installed releases](/v0.18/docs/installation#install-a-custom-configured-released-version) to include `sparkoperator.k8s.io/sparkapplication` as an allowed workload.

Enable the `SparkApplicationIntegration` feature gate. Check the [installation](/v0.18/docs/installation/#change-the-feature-gates-configuration) guide for details on feature gate configuration.

Check [administer cluster quotas](/v0.18/docs/tasks/manage/administer_cluster_quotas) for details on the initial cluster setup.

Check [the Spark Operator installation guide](https://www.kubeflow.org/docs/components/spark-operator/getting-started/#installation).

{{% alert title="Note" color="primary" %}}
In order to use SparkApplication integration, you must install [Spark Operator](https://github.com/kubeflow/spark-operator) [v2.4.0](https://github.com/kubeflow/spark-operator/releases/tag/v2.4.0) or above.

Please also remember belows:
- You will have to activate namespaces that you will deploy SparkApplication as described in [the official installation docs](https://www.kubeflow.org/docs/components/spark-operator/getting-started/#about-spark-job-namespaces).
- You will have to create spark serviceaccount and attach a proper role beforehand. Please refer to [Spark Operator's Getting Started Guide](https://www.kubeflow.org/docs/components/spark-operator/getting-started/#about-the-service-account-for-driver-pods) for details.
{{% /alert %}}

{{% alert title="Note" color="primary" %}}
In order to use SparkApplication, prior to v0.8.1, you need to restart Kueue after the installation.
You can do it by running: `kubectl delete pods -l control-plane=controller-manager -n kueue-system`.
{{% /alert %}}

## Spark Operator definition


### a. Queue selection

The target [local queue](/v0.18/docs/concepts/local_queue) should be specified in the `metadata.labels` section of the SparkApplication configuration.

```yaml
metadata:
  labels:
    kueue.x-k8s.io/queue-name: user-queue
```

{{% alert title="Note" color="primary" %}}
SparkApplication integration does not support dynamic allocation. If you set `spec.dynamicAllocation.enabled=true` in SparkApplication, Kueue will reject such resources in the webhook.
{{% /alert %}}

### b. Optionally set Suspend field in SparkOperation

```yaml
spec:
  suspend: true
```

By default, Kueue will set `suspend` to true via webhook and unsuspend it when the SparkApplication is admitted.

### c. Resource requests

Spark, not the Spark Operator, computes the CPU and memory requests of the driver and executor Pods
from the SparkApplication configuration. Kueue reproduces this computation to reserve the quota the
Pods will actually use:

- CPU: `coreRequest` if set, otherwise `cores`, otherwise `1`.
- Memory: `memory` (default `1g`) plus `memoryOverhead`. If `memoryOverhead` is not set, the overhead is
  `max(memoryOverheadFactor * memory, 384m)`, where `memoryOverheadFactor` defaults to `0.1` for
  Java and Scala applications and to `0.4` for Python and R applications. Executors of Python
  applications also get `spark.executor.pyspark.memory`, and executors get `spark.memory.offHeap.size`
  when `spark.memory.offHeap.enabled` is `true`.

Memory values use the Java format (for example `512m` or `2g`). The corresponding properties in
`spec.sparkConf` (for example `spark.driver.cores` or `spark.kubernetes.memoryOverheadFactor`) are
honored with the same precedence as `spark-submit` applies: typed driver and executor fields take
precedence over `spec.sparkConf`, which takes precedence over `spec.memoryOverheadFactor`.

{{% alert title="Note" color="primary" %}}
Kueue uses `spec.type` to decide whether an application is a Python or R application, while Spark
decides based on the extension of `spec.mainApplicationFile`. Make sure they agree, otherwise the
default memory overhead factor reserved by Kueue will differ from the one Spark applies.

Resources set through Spark Pod template files (`spark.kubernetes.driver.podTemplateFile` and
`spark.kubernetes.executor.podTemplateFile`) are not taken into account.
{{% /alert %}}

## Sample SparkApplication

{{< include "v0.18/examples/jobs/sample-sparkapplication.yaml" "yaml" >}}
